Reviewing steps and principles in dsp.

--- a/preprocess.tex
+++ b/preprocess.tex
@@ -1,4 +1,5 @@
 \chapter{Data preprocessing}
+\label{chap:preprocess}
 
 \chapterprecishere{I find your lack of faith disturbing.
   \par\raggedleft--- \textup{Darth Vader}, Star Wars: Episode IV -- A New Hope (1977)}
