--- a/project.tex
+++ b/project.tex
@@ -757,11 +757,15 @@ The \emph{data sprint} is focused on the database-related tasks: collection, int
 exploration.  \Cref{chap:data} covers the subjects of collection, integration (database
 normalization and joins) and tidying.  Part of data exploration is semantically describe
 the variables, especially in terms of data types and their properties; which is also
-discussed in that chapter.  Exploration also refers to \emph{exploratory
+discussed in that chapter.  All these tasks aim to prepare a dataset that represents
+the data that the solution will see in production.
+
+Exploration also refers to \emph{exploratory
 data analysis}, which is not covered in this book. % TODO yet (could be the next chapter)
 For a good introduction to exploratory data analysis, which includes both understanding
 and identifying issues in the data though descriptive statistics and visualization, consult chapter 3 of
 \textcite{Zumel2019}\footfullcite{Zumel2019}.
+
 The products (deliverables) of the data sprint are the exploratory analysis report and the
 data itself.  The exploratory analysis report is a document that describes the main
 characteristics of the data, such as the distribution of the variables, the presence of
@@ -787,14 +791,18 @@ the validation phase.
 The \emph{solution sprint} is focused on the solution search tasks: data preprocessing, machine
 learning, and validation.  \Cref{chap:preprocess} covers the subjects of data
 preprocessing ---
-adjustments to the data to be used by the machine learning algorithms ---, \cref{chap:slt}
-covers the subjects of learning machines, and \cref{chap:evaluation,chap:planning} cover
-the subjects of validation --- through evaluation we estimate performance for unseen
-data.  The products of the solution sprint are the validation report and the solution,
+adjustments to the data to be used by specific machine learning models ---, \cref{chap:slt}
+covers the subjects of learning machines --- methods that can estimate an unknown function
+based on input and output examples  ---, and \cref{chap:evaluation,chap:planning} cover
+the subjects of validation --- through evaluation we estimate the expected performance for unseen
+data, i.e. the probability distribution of the performance in production.
+
+The products of the solution sprint are the validation report and the solution itself,
 which is the preprocessor and the model.  The validation report is a document that
-describes the expected performance of the solution.  The solution is the code that
-implements the preprocessor and the model.  Usually, a version-controlled code that
-searches for the best pair of preprocessor and model also provides the solution.
+describes the expected performance of the solution in the real-world.  The script or
+program that searches for the best pair of preprocessor and model must be
+version-controlled.  This algorithm is usually computationally intensive, and it should
+run every time the dataset is updated.
 
 The \emph{application sprint} is focused on the application itself.  The tasks in this
 sprint focus on the development of the user interface, the communication between the
