--- a/data.tex
+++ b/data.tex
@@ -275,6 +275,7 @@ from other fields and sciences.  In this section, I explain the basis of each co
 \cref{def:ds}.
 
 \subsection{Phenomena}
+\label{sub:phenomena}
 
 Phenomenon is a term used to describe any observable event or process.  They are the
 source we use to understand the world around us.  In general, we use our senses to
