--- a/structured.tex
+++ b/structured.tex
@@ -787,7 +787,8 @@ formal proof.  Since tidy data focuses on data analysis and not on data storage,
 that there is more than one way to organize the data in a tidy format.  It actually
 depends on what you define as the observational unit.
 
-Moreover, both of them are related to the philosophical concept of substance (οὐσία).
+Moreover, both of them are related to the philosophical concept of substance (οὐσία) ---
+see \cref{sub:phenomena}.
 Entities and observational units are substances while attributes are predicates.
 Each tuple or observation are primary substances, i.e. substances that contrasts with
 everything else, particular, individual.
@@ -1086,7 +1087,8 @@ in a predefined manner.  For example, text, images, and videos are unstructured 
 Every unstructured dataset can be converted into a structured dataset.  However, the
 conversion process is not always straightforward nor lossless.  For example, we can
 convert a text into a structured dataset by counting the number of occurrences of each
-word.  However, we lose the order of the words in the text.
+word\footnote{This is called bag of words.}.
+However, we lose the order of the words in the text.
 
 The study of unstructured data is, for the moment, out of the scope of this book.
 
