--- a/structured.tex
+++ b/structured.tex
@@ -477,6 +477,7 @@ Usually, columns are named --- the collection of all column names is called the
 header, while rows are usually numerically indexed.
 
 \subsection{Common messy datasets}
+\label{sub:messy}
 
 \textcite{Wickham2014}\footfullcite{Wickham2014} lists some common problems with messy
 datasets and how to tidy them.  In this subsection, we focus on the problems and the
