--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -36,6 +36,7 @@ encourage you to read it and the references provided at each topic.
   \boxsubtitle{Context}
 
   \begin{itemize}
+    \itemsep0em
     \item Data science relies on a variety of mathematical and computational concepts.
     \item The main concepts are algorithms, data structures, set theory, linear algebra,
       and probability theory.
@@ -44,6 +45,7 @@ encourage you to read it and the references provided at each topic.
   \boxsubtitle{Objectives}
 
   \begin{itemize}
+    \itemsep0em
     \item Introduce a brief overview of the main computational, mathematical and
       statistical concepts in data science.
     \item Remind the reader the main definitions and properties of these concepts.
