--- a/about.tex
+++ b/about.tex
@@ -1,23 +1,25 @@
 \chapter{Preface}
 
 \begin{parwithqr}{https://github.com/verri/dsp-book}
-  I intend to make this book forever free and open-source. You can find (and contribute
-  to) the source code at \href{\aurl}{github.com/verri/dsp-book}.
+  I intend to make this book forever free and open-source.  You can find the source code at
+  \href{\aurl}{github.com/verri/dsp-book}.  Derivatives are not allowed, but you can
+  contribute to the book.  Contributors will be acknowledged in the book.
 \end{parwithqr}
 
 \vfill
 
-\begin{parwithqr}{https://www.buymeacoffee.com/verri}
-  If you like this book, consider \emph{buying me a coffee} at
-  \href{\aurl}{buymeacoffee.com/verri}.   All donations are used to improve this book,
-  including editing and proofreading.
+\begin{parwithqr}{https://leanpub.com/dsp}
+  However, if you like this book, consider buying the e-book version at
+  \href{\aurl}{leanpub.com/dsp}.  Any amount you pay will help me to keep this book
+  updated and to write new books.
 \end{parwithqr}
 
 \vfill
 
-\begin{parwithqr}{https://github.com/verri/dsp-book/issues}
-  If you find any typos, grammar errors, incomplete material or have any suggestions,
-  please open an issue at \href{\aurl}{github.com/verri/dsp-book/issues}.
+\begin{parwithqr}{https://github.com/verri/dsp-book/discussions}
+  If you have suggestions or questions, please open a discussion at
+  \href{\aurl}{github.com/verri/dsp-book/discussions}.  Feel free to ask anything.
+  Theoretical discussions and practical advices are also welcome.
 \end{parwithqr}
 
 \vfill
@@ -71,16 +73,12 @@ So\dots I expect my approach on the subject provide:
 This book will probably cover the following material:
 \begin{itemize}
   \item Brief history of data science.
-  \item Background topics.
-  \item Fundamental data concepts.
-  \item Stages in a data science project.
+  \item Fundamental concepts.
+  \item Data science project.
   \item Data handling.
-  \item Inductive learning and principles of statistical learning theory.
-  \item Experimental planning for data science.
-  \item Model evaluation and Bayesian analysis.
-  \item Documentation and deployment.
-  \item Ethical and legal issues in data science.
-  \item Privacy-preserving computational approaches.
+  \item Data preprocessing.
+  \item Learning from data.
+  \item Evaluation and validation.
 \end{itemize}
 
 Note that, in this book, I openly express my opinions and beliefs. Many times it might sound
@@ -88,3 +86,12 @@ controvertial.  I am not trying to be rude or to demean any researcher or practi
 field.  I am just trying to be honest and transparent.
 
 \emph{I'd rather be bold and straightforward than cower about my beliefs.}
+
+\section{Contributors}
+
+\begin{itemize}
+    \itemsep0em
+    \item \texttt{ryukinix}, Manoel V. Machado (aka lerax)
+    \item Johnny C. Marques
+\end{itemize}
+
