--- a/main.tex
+++ b/main.tex
@@ -258,7 +258,8 @@
   \footnotesize\noindent\color{red}
   \textbf{Disclaimer:} This version is a work in progress.  Parts of the book have
   been drafted with the help of \href{https://github.com/features/copilot}{GitHub Copilot}
-  and may not be revised yet by the author.
+  and may not be revised yet by the author.  Proofreading and professional editing are
+  still pending.
 }
 
 \vspace{0.5cm}
